fix(java-255): pre-load byte-buddy-agent in setenv.sh
ref: #35586